# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  branch-protection-rules.json  pyproject.toml
.github/workflows/: pre-commit.yml  pull_request.yml  test.yml  version_bump.yml  version_coverage_bump.yml
scripts/: generate_coverage_badge.py
src/pre_commit_hooks/: check_changelog.py
test/pre_commit_hooks/: check_changelog_test.py  conftest.py
